# expense-tracker

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  dev.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  bot.py  config.py  database.py  datamodel.py  ollama_client.py  parser.py  query.py  vllm_client.py
